Patrón criteria en tareas, traducción de filtro y cambios en FormatService